--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "nodemon --watch main.js --exec npm run build",
+    "build": "electron ."
   },
   "author": "",
   "license": "ISC",
